--- a/app/src/main/res/layout/item_model.xml
+++ b/app/src/main/res/layout/item_model.xml
@@ -16,20 +16,19 @@
         android:padding="1dp">
 
         <LinearLayout
-            android:id="@+id/ll_favorites"
+            android:id="@+id/ll_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/image_fav_star"
+                android:id="@+id/image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:scaleType="centerInside"
-                android:src="@android:drawable/btn_star_big_off" />
-
+                android:scaleType="centerInside"/>
         </LinearLayout>
+<!--        android:src=""-->
 
         <LinearLayout
             android:id="@+id/ll_trackName"
@@ -54,5 +53,22 @@
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:textColor="@color/textColorMain"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_favorites"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_fav_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                android:src="@android:drawable/btn_star_big_off" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
